--- a/courses.html
+++ b/courses.html
@@ -56,7 +56,7 @@
       </div>
 
       <div class="course-card">
-        <img src="images/course2.jpg" alt="Fine Arts">
+        <img src="images/course2.png" alt="Fine Arts">
         <div class="overlay"></div>
         <div class="text-overlay">
           <h3>Fine Arts (FA)</h3>
@@ -65,7 +65,7 @@
       </div>
 
       <div class="course-card">
-        <img src="images/course1.jpg" alt="Humanities">
+        <img src="images/course1.png" alt="Humanities">
         <div class="overlay"></div>
         <div class="text-overlay">
           <h3>Humanities (HU)</h3>
@@ -83,7 +83,7 @@
       </div>
 
       <div class="course-card">
-        <img src="images/composition.jpg" alt="Composition">
+        <img src="images/composition.png" alt="Composition">
         <div class="overlay"></div>
         <div class="text-overlay">
           <h3>Composition (EN)</h3>
@@ -92,7 +92,7 @@
       </div>
 
       <div class="course-card">
-        <img src="images/quantitative_literacy.jpg" alt="Quantitative Literacy">
+        <img src="images/quantitative_literacy.png" alt="Quantitative Literacy">
         <div class="overlay"></div>
         <div class="text-overlay">
           <h3>Quantitative Literacy (QL/QS)</h3>
@@ -101,7 +101,7 @@
       </div>
 
       <div class="course-card">
-        <img src="images/life_science.jpg" alt="Life Science">
+        <img src="images/life_science.png" alt="Life Science">
         <div class="overlay"></div>
         <div class="text-overlay">
           <h3>Life Science</h3>
@@ -110,7 +110,7 @@
       </div>
 
       <div class="course-card">
-        <img src="images/physical_science.jpg" alt="Physical Science">
+        <img src="images/physical_science.png" alt="Physical Science">
         <div class="overlay"></div>
         <div class="text-overlay">
           <h3>Physical Science (PS)</h3>
@@ -119,7 +119,7 @@
       </div>
 
       <div class="course-card">
-        <img src="images/communication.jpg" alt="Communication">
+        <img src="images/communication.png" alt="Communication">
         <div class="overlay"></div>
         <div class="text-overlay">
           <h3>Communication (CM)</h3>
@@ -128,7 +128,7 @@
       </div>
 
       <div class="course-card">
-        <img src="images/international_global.jpg" alt="International and Global">
+        <img src="images/international_global.png" alt="International and Global">
         <div class="overlay"></div>
         <div class="text-overlay">
           <h3>International & Global (IG)</h3>
@@ -137,7 +137,7 @@
       </div>
 
       <div class="course-card">
-        <img src="images/lifelong_wellness.jpg" alt="Lifelong Wellness">
+        <img src="images/lifelong_wellness.png" alt="Lifelong Wellness">
         <div class="overlay"></div>
         <div class="text-overlay">
           <h3>Lifelong Wellness (LW)</h3>
