--- a/courses.html
+++ b/courses.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -40,112 +39,130 @@
   <main>
     <div class="intro fade-in-section">
       <h2>Welcome to My General Education Courses</h2>
-      <p>This section isn’t just about “what I’ve learned.” This is where I break down my journey through SLCC, looking at the classes that molded me (sometimes with a side of tears).</p>
-      <p>You'll see how each course gave me something important—whether it was insight, skills, or simply the experience of surviving all-nighters. These aren’t just bullet points; these are *experiences*.</p>
+      <p>Alright, let’s get real—this section isn’t just about "what I’ve learned." It’s where I break down my journey through Salt Lake Community College, looking at the classes that molded my borderline chaos into something (mostly) functional.</p>
+      <p>You'll see how each course gave me something important—whether it was insight, skills, or simply the experience of surviving all-nighters. These aren’t just bullet points; these are experiences.</p>
     </div>
 
     <div class="courses-container fade-in-section">
 
-      <div class="course-card">
-        <img src="images/american_institutions.png" alt="American Institutions">
-        <div class="overlay"></div>
-        <div class="text-overlay">
-          <h3>American Institutions (AI)</h3>
-          <p>Understanding U.S. government and history.</p>
+      <!-- FIRST SPECIAL ROW -->
+      <div class="special-row">
+        
+        <div class="ai-column">
+          <div class="course-card">
+            <img src="images/american_institutions.png" alt="American Institutions">
+            <div class="overlay"></div>
+            <div class="text-overlay">
+              <h3>American Institutions (AI)</h3>
+              <p>Understanding U.S. government and history.</p>
+            </div>
+          </div>
+
+          <div class="sub-row">
+            <div class="course-card">
+              <img src="images/fine_arts.png" alt="Fine Arts">
+              <div class="overlay"></div>
+              <div class="text-overlay">
+                <h3>Fine Arts (FA)</h3>
+                <p>Explore artistic expression and its impact on culture.</p>
+              </div>
+            </div>
+
+            <div class="course-card">
+              <img src="images/social_science.png" alt="Social Science">
+              <div class="overlay"></div>
+              <div class="text-overlay">
+                <h3>Social Science (SS)</h3>
+                <p>Examine human society and relationships.</p>
+              </div>
+            </div>
+          </div>
         </div>
+
+        <div class="humanities-column">
+          <div class="course-card">
+            <img src="images/humanities.png" alt="Humanities">
+            <div class="overlay"></div>
+            <div class="text-overlay">
+              <h3>Humanities (HU)</h3>
+              <p>Study philosophy, literature, and art.</p>
+            </div>
+          </div>
+        </div>
+
       </div>
 
-      <div class="course-card">
-        <img src="images/course2.png" alt="Fine Arts">
-        <div class="overlay"></div>
-        <div class="text-overlay">
-          <h3>Fine Arts (FA)</h3>
-          <p>Explore artistic expression and its impact on culture.</p>
-        </div>
-      </div>
+      <!-- AFTER SPECIAL ROW, REGULAR COURSES -->
 
-      <div class="course-card">
-        <img src="images/course1.png" alt="Humanities">
-        <div class="overlay"></div>
-        <div class="text-overlay">
-          <h3>Humanities (HU)</h3>
-          <p>Study philosophy, literature, and art.</p>
-        </div>
-      </div>
+      <div class="courses-grid">
 
-      <div class="course-card">
-        <img src="images/social_science.png" alt="Social Science">
-        <div class="overlay"></div>
-        <div class="text-overlay">
-          <h3>Social Science (SS)</h3>
-          <p>Examine human society and relationships.</p>
+        <div class="course-card">
+          <img src="images/communication.png" alt="Communication">
+          <div class="overlay"></div>
+          <div class="text-overlay">
+            <h3>Communication (CM)</h3>
+            <p>Effective human communication skills.</p>
+          </div>
         </div>
-      </div>
 
-      <div class="course-card">
-        <img src="images/composition.png" alt="Composition">
-        <div class="overlay"></div>
-        <div class="text-overlay">
-          <h3>Composition (EN)</h3>
-          <p>Developing effective writing skills.</p>
+        <div class="course-card">
+          <img src="images/life_science.png" alt="Life Science">
+          <div class="overlay"></div>
+          <div class="text-overlay">
+            <h3>Life Science</h3>
+            <p>Study of living organisms.</p>
+          </div>
         </div>
-      </div>
 
-      <div class="course-card">
-        <img src="images/quantitative_literacy.png" alt="Quantitative Literacy">
-        <div class="overlay"></div>
-        <div class="text-overlay">
-          <h3>Quantitative Literacy (QL/QS)</h3>
-          <p>Applying mathematical skills.</p>
+        <div class="course-card">
+          <img src="images/physical_science.png" alt="Physical Science">
+          <div class="overlay"></div>
+          <div class="text-overlay">
+            <h3>Physical Science (PS)</h3>
+            <p>Exploring non-living systems.</p>
+          </div>
         </div>
-      </div>
 
-      <div class="course-card">
-        <img src="images/life_science.png" alt="Life Science">
-        <div class="overlay"></div>
-        <div class="text-overlay">
-          <h3>Life Science</h3>
-          <p>Study of living organisms.</p>
+        <div class="course-card">
+          <img src="images/international_global.png" alt="International and Global">
+          <div class="overlay"></div>
+          <div class="text-overlay">
+            <h3>International & Global (IG)</h3>
+            <p>Understanding global perspectives.</p>
+          </div>
         </div>
-      </div>
 
-      <div class="course-card">
-        <img src="images/physical_science.png" alt="Physical Science">
-        <div class="overlay"></div>
-        <div class="text-overlay">
-          <h3>Physical Science (PS)</h3>
-          <p>Exploring non-living systems.</p>
+        <div class="course-card">
+          <img src="images/lifelong_wellness.png" alt="Lifelong Wellness">
+          <div class="overlay"></div>
+          <div class="text-overlay">
+            <h3>Lifelong Wellness (LW)</h3>
+            <p>Principles of health and well-being.</p>
+          </div>
         </div>
-      </div>
 
-      <div class="course-card">
-        <img src="images/communication.png" alt="Communication">
-        <div class="overlay"></div>
-        <div class="text-overlay">
-          <h3>Communication (CM)</h3>
-          <p>Effective human communication.</p>
+        <div class="course-card">
+          <img src="images/quantitative_literacy.png" alt="Quantitative Literacy">
+          <div class="overlay"></div>
+          <div class="text-overlay">
+            <h3>Quantitative Literacy (QL)</h3>
+            <p>Applying mathematical reasoning skills.</p>
+          </div>
         </div>
-      </div>
 
-      <div class="course-card">
-        <img src="images/international_global.png" alt="International and Global">
-        <div class="overlay"></div>
-        <div class="text-overlay">
-          <h3>International & Global (IG)</h3>
-          <p>Understanding global perspectives.</p>
+        <div class="course-card">
+          <img src="images/composition.png" alt="Composition">
+          <div class="overlay"></div>
+          <div class="text-overlay">
+            <h3>Composition (EN)</h3>
+            <p>Developing effective writing skills.</p>
+          </div>
         </div>
-      </div>
 
-      <div class="course-card">
-        <img src="images/lifelong_wellness.png" alt="Lifelong Wellness">
-        <div class="overlay"></div>
-        <div class="text-overlay">
-          <h3>Lifelong Wellness (LW)</h3>
-          <p>Principles of health and well-being.</p>
-        </div>
       </div>
 
     </div>
+
   </main>
 
   <footer>
@@ -182,5 +199,4 @@
     targets.forEach(target => observer.observe(target));
   </script>
 </body>
-
 </html>
