--- a/courses.html
+++ b/courses.html
@@ -39,15 +39,16 @@
   <main>
     <div class="intro fade-in-section">
       <h2>Welcome to My General Education Courses</h2>
-      <p>Alright, let's get real—this section isn’t just about “what I’ve learned.” It’s where I break down my journey through Salt Lake Community College, looking at the classes that molded my journey with a side of chaos (and a lot of late nights).</p>
+      <p>Alright, let's get real—this section isn’t just about “what I’ve learned.” It’s where I break down my journey through Salt Lake Community College, looking at the classes that molded me (with a side of chaos and too much caffeine).</p>
       <p>You'll see how each course gave me something important—whether it was insight, skills, or simply the experience of surviving all-nighters. These aren’t just bullet points; these are experiences.</p>
     </div>
 
     <div class="courses-container fade-in-section">
 
-      <!-- Special Layout (AI and Humanities) -->
+      <!-- SPECIAL ROW FIRST -->
       <div class="special-row">
-        
+
+        <!-- Left Column (AI + 2 small courses under it) -->
         <div class="ai-column">
           <div class="course-card">
             <img src="images/american_institutions.png" alt="American Institutions">
@@ -79,20 +80,21 @@
           </div>
         </div>
 
+        <!-- Right Column (Humanities) -->
         <div class="humanities-column">
           <div class="course-card">
             <img src="images/humanities.png" alt="Humanities">
             <div class="overlay"></div>
             <div class="text-overlay">
               <h3>Humanities (HU)</h3>
-              <p>Study philosophy, literature, and art.</p>
+              <p>Study philosophy, literature, and art through time.</p>
             </div>
           </div>
         </div>
 
       </div>
 
-      <!-- After special layout - Normal Grid -->
+      <!-- THEN NORMAL GRID STARTS -->
       <div class="courses-grid">
 
         <div class="course-card">
@@ -118,7 +120,7 @@
           <div class="overlay"></div>
           <div class="text-overlay">
             <h3>Physical Science (PS)</h3>
-            <p>Exploring non-living systems.</p>
+            <p>Exploring non-living systems and phenomena.</p>
           </div>
         </div>
 
@@ -127,7 +129,7 @@
           <div class="overlay"></div>
           <div class="text-overlay">
             <h3>International & Global (IG)</h3>
-            <p>Understanding global perspectives.</p>
+            <p>Understanding world cultures and global perspectives.</p>
           </div>
         </div>
 
@@ -136,7 +138,7 @@
           <div class="overlay"></div>
           <div class="text-overlay">
             <h3>Lifelong Wellness (LW)</h3>
-            <p>Principles of health and well-being.</p>
+            <p>Principles of health and well-being across life stages.</p>
           </div>
         </div>
 
@@ -145,7 +147,7 @@
           <div class="overlay"></div>
           <div class="text-overlay">
             <h3>Quantitative Literacy (QL)</h3>
-            <p>Applying mathematical skills and logical thinking.</p>
+            <p>Applying math and reasoning skills logically.</p>
           </div>
         </div>
 
@@ -154,7 +156,7 @@
           <div class="overlay"></div>
           <div class="text-overlay">
             <h3>Composition (EN)</h3>
-            <p>Developing effective writing skills.</p>
+            <p>Developing effective and impactful writing skills.</p>
           </div>
         </div>
 
