--- a/courses.html
+++ b/courses.html
@@ -39,65 +39,42 @@
   <main>
     <div class="intro fade-in-section">
       <h2>Welcome to My General Education Courses</h2>
-      <p>Alright, let's get real—this section isn’t just about “what I’ve learned.” It’s where I break down my journey through Salt Lake Community College, looking at the classes that molded me (with a side of chaos and too much caffeine).</p>
-      <p>You'll see how each course gave me something important—whether it was insight, skills, or simply the experience of surviving all-nighters. These aren’t just bullet points; these are experiences.</p>
+      <p>These aren't just random classes — they're the chaos, late nights, coffee-fueled rants, and occasional enlightenment that shaped my journey through SLCC.</p>
     </div>
 
     <div class="courses-container fade-in-section">
 
-      <!-- SPECIAL ROW FIRST -->
-      <div class="special-row">
+      <!-- Special Puzzle Layout -->
+      <div class="special-grid-layout">
 
-        <!-- Left Column (AI + 2 small courses under it) -->
-        <div class="ai-column">
-          <div class="course-card">
-            <img src="images/american_institutions.png" alt="American Institutions">
-            <div class="overlay"></div>
-            <div class="text-overlay">
-              <h3>American Institutions (AI)</h3>
-              <p>Understanding U.S. government and history.</p>
-            </div>
-          </div>
-
-          <div class="sub-row">
-            <div class="course-card">
-              <img src="images/fine_arts.png" alt="Fine Arts">
-              <div class="overlay"></div>
-              <div class="text-overlay">
-                <h3>Fine Arts (FA)</h3>
-                <p>Explore artistic expression and its impact on culture.</p>
-              </div>
-            </div>
-
-            <div class="course-card">
-              <img src="images/social_science.png" alt="Social Science">
-              <div class="overlay"></div>
-              <div class="text-overlay">
-                <h3>Social Science (SS)</h3>
-                <p>Examine human society and relationships.</p>
-              </div>
-            </div>
+        <div class="ai-card">
+          <img src="images/american_institutions.png" alt="American Institutions">
+          <div class="overlay"></div>
+          <div class="text-overlay">
+            <h3>American Institutions (AI)</h3>
+            <p>Understanding U.S. government and history.</p>
           </div>
         </div>
 
-        <!-- Right Column (Humanities) -->
-        <div class="humanities-column">
-          <div class="course-card">
-            <img src="images/humanities.png" alt="Humanities">
-            <div class="overlay"></div>
-            <div class="text-overlay">
-              <h3>Humanities (HU)</h3>
-              <p>Study philosophy, literature, and art through time.</p>
-            </div>
+        <div class="small-card">
+          <img src="images/fine_arts.png" alt="Fine Arts">
+          <div class="overlay"></div>
+          <div class="text-overlay">
+            <h3>Fine Arts (FA)</h3>
+            <p>Exploring artistic expression and culture.</p>
           </div>
         </div>
 
-      </div>
+        <div class="small-card">
+          <img src="images/social_science.png" alt="Social Science">
+          <div class="overlay"></div>
+          <div class="text-overlay">
+            <h3>Social Science (SS)</h3>
+            <p>Understanding human behavior and societies.</p>
+          </div>
+        </div>
 
-      <!-- THEN NORMAL GRID STARTS -->
-      <div class="courses-grid">
-
-        <div class="course-card">
+        <div class="small-card">
           <img src="images/communication.png" alt="Communication">
           <div class="overlay"></div>
           <div class="text-overlay">
@@ -106,61 +83,27 @@
           </div>
         </div>
 
-        <div class="course-card">
+        <div class="small-card">
           <img src="images/life_science.png" alt="Life Science">
           <div class="overlay"></div>
           <div class="text-overlay">
-            <h3>Life Science</h3>
-            <p>Study of living organisms.</p>
+            <h3>Life Science (LS)</h3>
+            <p>Study of living organisms and ecosystems.</p>
           </div>
         </div>
 
-        <div class="course-card">
-          <img src="images/physical_science.png" alt="Physical Science">
+        <div class="humanities-card">
+          <img src="images/humanities.png" alt="Humanities">
           <div class="overlay"></div>
           <div class="text-overlay">
-            <h3>Physical Science (PS)</h3>
-            <p>Exploring non-living systems and phenomena.</p>
-          </div>
-        </div>
-
-        <div class="course-card">
-          <img src="images/international_global.png" alt="International & Global">
-          <div class="overlay"></div>
-          <div class="text-overlay">
-            <h3>International & Global (IG)</h3>
-            <p>Understanding world cultures and global perspectives.</p>
-          </div>
-        </div>
-
-        <div class="course-card">
-          <img src="images/lifelong_wellness.png" alt="Lifelong Wellness">
-          <div class="overlay"></div>
-          <div class="text-overlay">
-            <h3>Lifelong Wellness (LW)</h3>
-            <p>Principles of health and well-being across life stages.</p>
-          </div>
-        </div>
-
-        <div class="course-card">
-          <img src="images/quantitative_literacy.png" alt="Quantitative Literacy">
-          <div class="overlay"></div>
-          <div class="text-overlay">
-            <h3>Quantitative Literacy (QL)</h3>
-            <p>Applying math and reasoning skills logically.</p>
-          </div>
-        </div>
-
-        <div class="course-card">
-          <img src="images/composition.png" alt="Composition">
-          <div class="overlay"></div>
-          <div class="text-overlay">
-            <h3>Composition (EN)</h3>
-            <p>Developing effective and impactful writing skills.</p>
+            <h3>Humanities (HU)</h3>
+            <p>Philosophy, literature, and culture exploration.</p>
           </div>
         </div>
 
       </div>
+
+      <!-- ADDITIONAL COURSES (Coming Next!) -->
 
     </div>
   </main>
