--- a/courses.html
+++ b/courses.html
@@ -39,71 +39,83 @@
   <main>
     <div class="intro fade-in-section">
       <h2>Welcome to My General Education Courses</h2>
-      <p>These aren't just random classes — they're the chaos, late nights, coffee-fueled rants, and occasional enlightenment that shaped my journey through SLCC.</p>
+      <p>These courses shaped my journey through SLCC — sometimes inspiring, sometimes traumatizing (but mostly inspiring, I swear).</p>
     </div>
 
     <div class="courses-container fade-in-section">
 
-      <!-- Special Puzzle Layout -->
+      <!-- Puzzle Layout -->
       <div class="special-grid-layout">
 
         <div class="ai-card">
-          <img src="images/american_institutions.png" alt="American Institutions">
-          <div class="overlay"></div>
-          <div class="text-overlay">
-            <h3>American Institutions (AI)</h3>
-            <p>Understanding U.S. government and history.</p>
+          <div class="course-card">
+            <img src="images/american_institutions.png" alt="American Institutions">
+            <div class="overlay"></div>
+            <div class="text-overlay">
+              <h3>American Institutions (AI)</h3>
+              <p>Understanding U.S. government and history.</p>
+            </div>
           </div>
         </div>
 
         <div class="small-card">
-          <img src="images/fine_arts.png" alt="Fine Arts">
-          <div class="overlay"></div>
-          <div class="text-overlay">
-            <h3>Fine Arts (FA)</h3>
-            <p>Exploring artistic expression and culture.</p>
+          <div class="course-card">
+            <img src="images/fine_arts.png" alt="Fine Arts">
+            <div class="overlay"></div>
+            <div class="text-overlay">
+              <h3>Fine Arts (FA)</h3>
+              <p>Exploring artistic expression and creativity.</p>
+            </div>
           </div>
         </div>
 
         <div class="small-card">
-          <img src="images/social_science.png" alt="Social Science">
-          <div class="overlay"></div>
-          <div class="text-overlay">
-            <h3>Social Science (SS)</h3>
-            <p>Understanding human behavior and societies.</p>
+          <div class="course-card">
+            <img src="images/social_science.png" alt="Social Science">
+            <div class="overlay"></div>
+            <div class="text-overlay">
+              <h3>Social Science (SS)</h3>
+              <p>Understanding human behavior and relationships.</p>
+            </div>
           </div>
         </div>
 
         <div class="small-card">
-          <img src="images/communication.png" alt="Communication">
-          <div class="overlay"></div>
-          <div class="text-overlay">
-            <h3>Communication (CM)</h3>
-            <p>Effective human communication skills.</p>
+          <div class="course-card">
+            <img src="images/communication.png" alt="Communication">
+            <div class="overlay"></div>
+            <div class="text-overlay">
+              <h3>Communication (CM)</h3>
+              <p>Effective human communication skills.</p>
+            </div>
           </div>
         </div>
 
         <div class="small-card">
-          <img src="images/life_science.png" alt="Life Science">
-          <div class="overlay"></div>
-          <div class="text-overlay">
-            <h3>Life Science (LS)</h3>
-            <p>Study of living organisms and ecosystems.</p>
+          <div class="course-card">
+            <img src="images/life_science.png" alt="Life Science">
+            <div class="overlay"></div>
+            <div class="text-overlay">
+              <h3>Life Science (LS)</h3>
+              <p>Study of living organisms and ecosystems.</p>
+            </div>
           </div>
         </div>
 
         <div class="humanities-card">
-          <img src="images/humanities.png" alt="Humanities">
-          <div class="overlay"></div>
-          <div class="text-overlay">
-            <h3>Humanities (HU)</h3>
-            <p>Philosophy, literature, and culture exploration.</p>
+          <div class="course-card">
+            <img src="images/humanities.png" alt="Humanities">
+            <div class="overlay"></div>
+            <div class="text-overlay">
+              <h3>Humanities (HU)</h3>
+              <p>Philosophy, literature, and arts of human culture.</p>
+            </div>
           </div>
         </div>
 
       </div>
 
-      <!-- ADDITIONAL COURSES (Coming Next!) -->
+      <!-- More courses can be added here horizontally -->
 
     </div>
   </main>
