--- a/courses.html
+++ b/courses.html
@@ -39,14 +39,13 @@
   <main>
     <div class="intro fade-in-section">
       <h2>Welcome to My General Education Courses</h2>
-      <p>These courses shaped my journey through SLCC — sometimes inspiring, sometimes traumatizing (but mostly inspiring, I swear).</p>
+      <p>These courses are the backbone of my education — some inspiring, some traumatic, all unforgettable.</p>
     </div>
 
     <div class="courses-container fade-in-section">
 
-      <!-- Puzzle Layout -->
-      <div class="special-grid-layout">
-
+      <!-- First Row -->
+      <div class="course-row">
         <div class="ai-card">
           <div class="course-card">
             <img src="images/american_institutions.png" alt="American Institutions">
@@ -64,7 +63,7 @@
             <div class="overlay"></div>
             <div class="text-overlay">
               <h3>Fine Arts (FA)</h3>
-              <p>Exploring artistic expression and creativity.</p>
+              <p>Exploring creativity and culture.</p>
             </div>
           </div>
         </div>
@@ -75,18 +74,21 @@
             <div class="overlay"></div>
             <div class="text-overlay">
               <h3>Social Science (SS)</h3>
-              <p>Understanding human behavior and relationships.</p>
+              <p>Understanding human societies and behavior.</p>
             </div>
           </div>
         </div>
+      </div>
 
+      <!-- Second Row -->
+      <div class="course-row">
         <div class="small-card">
           <div class="course-card">
             <img src="images/communication.png" alt="Communication">
             <div class="overlay"></div>
             <div class="text-overlay">
               <h3>Communication (CM)</h3>
-              <p>Effective human communication skills.</p>
+              <p>Mastering effective human communication.</p>
             </div>
           </div>
         </div>
@@ -97,7 +99,7 @@
             <div class="overlay"></div>
             <div class="text-overlay">
               <h3>Life Science (LS)</h3>
-              <p>Study of living organisms and ecosystems.</p>
+              <p>Exploring the living world and ecosystems.</p>
             </div>
           </div>
         </div>
@@ -108,14 +110,11 @@
             <div class="overlay"></div>
             <div class="text-overlay">
               <h3>Humanities (HU)</h3>
-              <p>Philosophy, literature, and arts of human culture.</p>
+              <p>Philosophy, art, and literature through time.</p>
             </div>
           </div>
         </div>
-
       </div>
-
-      <!-- More courses can be added here horizontally -->
 
     </div>
   </main>
