--- a/courses.html
+++ b/courses.html
@@ -106,7 +106,7 @@
 
         <div class="humanities-card">
           <div class="course-card">
-            <img src="images/humanities.png" alt="Humanities">
+            <img src="images/course1.png" alt="Humanities">
             <div class="overlay"></div>
             <div class="text-overlay">
               <h3>Humanities (HU)</h3>
