--- a/courses.html
+++ b/courses.html
@@ -39,7 +39,7 @@
   <main>
     <div class="intro fade-in-section">
       <h2>Welcome to My General Education Courses</h2>
-      <p>These courses are the backbone of my education — some inspiring, some traumatic, all unforgettable.</p>
+      <p>These courses are the backbone of my education — some inspiring, some traumatizing, all unforgettable.</p>
     </div>
 
     <div class="courses-container fade-in-section">
